--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project",
+  "name": "Hāte Apparel",
   "dependencies": {
     "body-parser": "^1.14.2",
     "ejs": "1.0.0",
@@ -7,6 +7,5 @@
     "express-session": "^1.13.0",
     "mongoose": "^4.4.2",
     "mongoose-validator": "^1.2.4",
-    "socket.io": "^1.4.5"
   }
 }
